--- a/public/index.html
+++ b/public/index.html
@@ -1,185 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-	 <head>
-			<title>POGI JUSWA</title>
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-			<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link rel="stylesheet" href="styles.css">
-	 </head>
-     <style>
-     .container2 {
-            margin: 20px auto;
-            padding: 10px;
-            max-width: 90%;
-            background-color: #000;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
+   <head>
+      <title>Autobot for All</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="styles.css">
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
+         <a class="navbar-brand" href="#" style="color: blue; "#">Home </a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 70px;;">
+            <ul class="navbar-nav">
+               <li class="nav-item active">
+                  <a class="nav-link" href="/">🏠 Main Home <span class="sr-only">(current)</span>
+                  </a>
+               </li>
+               <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">💻 Features </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                     <a class="dropdown-item" href="#">🍪 Cookies Extractor</a>
+                     <div class="dropdown-divider"></div>
+                     <a class="dropdown-item" href="/step_by_step_guide">🔁 Step-by-Step Guide</a>
+                  </div>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="online_user">⌛ Active Session</a>
+                  <a class="nav-link" href="https://tempmail-generator.vercel.app//r">📩 Get Free Tempmail</a>
+                 <a class="nav-link" href="https://mrepol742.github.io/webviumdev/">🌍 Get Webvium Dev Browser</a>
+                  <a class="nav-link" href="/developer">🧑‍💻 Developer</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+      <div class="container">
+         <h1 class="col text-center" style="font-size: 20px; padding: 10px;">ENTER APPSTATE HERE</h1>
+         <form id="json-form" onsubmit="submitForm(event)">
+            <div class="row">
+               <div class="col-md-12">
+                  <textarea id="json-data" class="form-control centered-textarea center-placeholder" placeholder="."style="font-size: 18px; color:blue;""></textarea>
+               </div>
+            </div>
+         </form>
+         <p style=" margin-top: 10px">Greetings before proceed to terms and conditions and privacy.</p>
+      </div>
+      <div class="container">
+         <h1 class="col text-center" style="font-size: 20px; padding: 10px;">          Terms and Conditions and Privacy Policy</h1>
+         <p>Upon deployment or logging in, your chatbot connection remains active unless you personally access the bot's account or modify the password. This measure is in place to ensure the seamless operation and security of the chatbot.</p>
+         <p>Exercise caution and refrain from sharing your cookie with any third party. Your cookie contains sensitive information crucial to the confidentiality and security of your account and the connected chatbot.</p>
+         <p>As the service provider, we disclaim responsibility for any unauthorized account access. Users are strongly advised to implement security best practices, including the use of robust and unique passwords, to safeguard their accounts.</p>
+         <p>Accessing the bot's account may lead to a disruption in service. It is strongly recommended not to attempt to access the bot's account to maintain the continuous functionality of the chatbot.</p>
+         <p>If the chatbot is unresponsive, kindly return to this website. If issues persist, consider changing the account to ensure uninterrupted service.</p>
+         <p>We, as the service provider, disclaim responsibility for any account locking or suspension on the provided account. Users are expected to adhere to the terms of service of the hosting platform.</p>
+         <p>For added security, it is highly recommended to use dummy or disposable accounts when interacting with the chatbot.</p>
+         <p>Users are strictly prohibited from employing the chatbot for malicious activities. Violation of this rule may result in the termination of access to the chatbot and may have legal consequences.</p>
+         <div class="container" id="listOfCommands">
+            <h1 style="font-size: 16px; padding: 10px;">SELECT YOUR CMD.</h1>
+            <button class="btn btn-primary" onclick="selectAllCommands()">SELECT ALL CMDS</button>
+         </div>
+         <div class="container" id="listOfCommandsEvent">
+            <h1 style="font-size: 16px; padding: 10px;">SELECT YOUR EVENT.</h1>
+            <button class="btn btn-primary" onclick="selectAllEvents()">SELECT ALL EVENT</button>
+         </div>
+         <div class="container" id="prefixOfCommands">
+            <h1 style="font-size: 16px; padding: 10px;">PREFIX (OPTIONAL)</h1>
+            <input type="text" id="inputOfPrefix">
+         </div>
+         <div class="container" id="adminOfCommands">
+            <h1 style="font-size: 16px; padding: 10px;">ADMIN UID (RECOMMENDED)</h1>
+            <input type="text" id="inputOfAdmin">
+         </div>
+         <label style="font-size: 14px; display: flex; align-items: center; padding: 10px;">
+         <input type="checkbox" id="agreeCheckbox" style="margin-right: 10px;"> CHECK THE BOX TO AGREE TERMS AND CONDITIONS.. </label>
+         <div class="col text-center">
+            <button class="btn btn-primary" onclick="State()" disabled id="submitButton" style="width: 100%">D E P L O Y</button>
+         </div>
+      </div>
+      <div id="result" class="container text-center" style="display: none;"></div>
+      <div class="footer">
+         <p>Time: <span id="time"></span>
+         </p>
+         <p>Ping: <span id="ping"></span>
+         </p>
+      </div>
+      <script src="script.js"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+   <div class="container">
+        <h1>VISITOR INFO & DATA</h1>
+        <p></p>IP ADDRESS: <span id="ip">Loading...</span></p>
+        <p>CITY: <span id="city">Loading...</span></p>
+        <p>REGION: <span id="region">Loading...</span></p>
+        <p>COUNTRY: <span id="country">Loading...</span></p>
+        <p>LOCATION: <span id="location">Loading...</span></p>
+        <p>ORGANIZATION : <span id="org">Loading...</span></p>
+        <p>POSTAL CODE: <span id="postal">Loading...</span></p>
+        <p>MOMENT TIMEZONE: <span id="timezone">Loading...</span></p>
+        <p>CURRENT TIME: <span id="times">Loading...</span></p>
+        <p>CURRENT DATE:<span id="date">Loading...</span></p>
 
-        video {
-            width: 100%;
-            height: auto;
-            border-radius: 4px;
-        }
+        <footer>
 
-        .animated-text {
-            font-size: 25px;
-            margin-bottom: 20px;
-            font-weight: bold;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-     </style>
-	 <body>
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				 <a class="navbar-brand" href="#">𝗛𝗼𝗺𝗲 </a>
-				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				 <span class="navbar-toggler-icon"></span>
-				 </button>
-				 <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 70px;">
-						<ul class="navbar-nav">
-							 <li class="nav-item active">
-									<a class="nav-link" href="/">Home <span class="sr-only">(current)</span>
-									</a>
-							 </li>
-							 <li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Features </a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										 <a class="dropdown-item" href="#">Cookies Extractor</a>
-										 <div class="dropdown-divider"></div>
-										 <a class="dropdown-item" href="/step_by_step_guide">Step-by-Step Guide</a>
-									</div>
-							 </li>
-							 <li class="nav-item">
-									<a class="nav-link" href="online_user">Active</a>
-							 </li>
-						</ul>
-        </div>
+            © COPY RIGHT<a href="https://www.facebook.com/100068434233610">YGG CHNNNX</a> ALL RIGHT RESERVED 2024.
+        </footer>
     </div>
-				</div>
-				
-			</nav>
-			<div class="container">
-				 <h1 class="col text-center" style="font-size: 20px; padding: 10px;">𝗘𝗻𝘁𝗲𝗿 𝗬𝗼𝘂𝗿 𝗙𝗯𝘀𝘁𝗮𝘁𝗲 𝗖𝗼𝗼𝗸𝗶𝗲</h1>
-				 <form id="json-form" onsubmit="submitForm(event)">
-						<div class="row">
-							 <div class="col-md-12">
-									<textarea id="json-data" class="form-control centered-textarea center-placeholder" placeholder=""></textarea>
-							 </div>
-						</div>
-				 </form>
-				 <p style=" margin-top: 10px">Greetings! Begin by entering your cookie.</p>
-			</div>
-			<div class="container">
-				 <div class="container" id="listOfCommands">
-						<h1 style="font-size: 16px; padding: 10px;">Please choose your commands by tapping on the respective options.</h1>
-						<button class="btn btn-primary" onclick="selectAllCommands()">Select all commands</button>
-				 </div>
-				 <div class="container" id="listOfCommandsEvent">
-						<h1 style="font-size: 16px; padding: 10px;">Please choose your event commands by tapping on the respective options.</h1>
-						<button class="btn btn-primary" onclick="selectAllEvents()">Select all events</button>
-				 </div>
-				 <div class="container" id="prefixOfCommands">
-						<h1 style="font-size: 16px; padding: 10px;">Please provide a prefix (optional)(choose one) .$,  #,  @,  &,  !,  ?,  +,  /,  *,  -,  %,  ✓, •,  ×,  },  {,  ∆, §, ~, |, π, ÷, =, €</h1>
-						<input type="text" id="inputOfPrefix">
-				 </div>
-				 <div class="container" id="adminOfCommands">
-						<h1 style="font-size: 16px; padding: 10px;">Please provide an uid (optional). If you choose not to, entering 'default' will be considered as your input</h1>
-						<input type="text" id="inputOfAdmin">
-				 </div>
-				 <label style="font-size: 14px; display: flex; align-items: center; padding: 22px;">
-				 <input type="checkbox" id="agreeCheckbox" style="color: #FFF; margin-right: 10px;"> Checking this box certifies that I have read, understood, and agreed to the Terms and Conditions. </label>
-				 <div class="col text-center">
-						<button class="btn btn-primary" onclick="State()" disabled id="submitButton" style="width: 100%">Submit</button>
-				 </div>
-			</div>
-			<div id="result" class="container text-center" style="display: none;"></div>
-			<div class="footer">
-				 <p>Time: <span id="time"></span>
-				 </p>
-				 <p>Ping: <span id="ping"></span>
-				 </p>
-			</div>
-			<script src="script.js"></script>
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
-	 </body>
+    <script>
+        async function fetchIPInfo() {
+            try {
+                const response = await fetch('https://ipinfo.io/json?60117f9430a2b5');
+                const data = await response.json();
+
+                document.getElementById('ip').textContent = data.ip;
+                document.getElementById('city').textContent = data.city;
+                document.getElementById('region').textContent = data.region;
+                document.getElementById('country').textContent = data.country;
+                document.getElementById('location').textContent = data.loc;
+                document.getElementById('org').textContent = data.org;
+                document.getElementById('postal').textContent = data.postal;
+                document.getElementById('timezone').textContent = data.timezone;
+            } catch (error) {
+                console.error('Error fetching IP info:', error);
+            }
+        }
+
+        function updateTime() {
+            const now = new Date();
+            document.getElementById('times').textContent = now.toLocaleTimeString();
+            document.getElementById('date').textContent = now.toLocaleDateString();
+        }
+
+        fetchIPInfo();
+        updateTime();
+        setInterval(updateTime, 1000);
+    </script>
+</body>
 </html>
-<body>
-	<div class="container">
-        <div class="animated-text">
-            <script type="text/javascript">
-                var farbbibliothek = [
-                    ["#FF0000","#FF1100","#FF2200","#FF3300","#FF4400","#FF5500","#FF6600","#FF7700","#FF8800","#FF9900","#FFaa00","#FFbb00","#FFcc00","#FFdd00","#FFee00","#FFff00","#FFee00","#FFdd00","#FFcc00","#FFbb00","#FFaa00","#FF9900","#FF8800","#FF7700","#FF6600","#FF5500","#FF4400","#FF3300","#FF2200","#FF1100"],
-                    ["#00FF00","#000000","#00FF00","#00FF00"],
-                    ["#00FF00","#FF0000","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00","#00FF00"],
-                    ["#FF0000","#FF4000","#FF8000","#FFC000","#FFFF00","#C0FF00","#80FF00","#40FF00","#00FF00","#00FF40","#00FF80","#00FFC0","#00FFFF","#00C0FF","#0080FF","#0040FF","#0000FF","#4000FF","#8000FF","#C000FF","#FF00FF","#FF00C0","#FF0080","#FF0040"],
-                    ["#FF0000","#EE0000","#DD0000","#CC0000","#BB0000","#AA0000","#990000","#880000","#770000","#660000","#550000","#440000","#330000","#220000","#110000","#000000","#110000","#220000","#330000","#440000","#550000","#660000","#770000","#880000","#990000","#AA0000","#BB0000","#CC0000","#DD0000","#EE0000"],
-                    ["#000000","#000000","#000000","#FFFFFF","#FFFFFF","#FFFFFF"],
-                    ["#0000FF","#FFFF00"]
-                ];
-                var farben = farbbibliothek[4];
-                function farbschrift() {
-                    for(var b = 0; b < Buchstabe.length; b++) {
-                        document.all["a" + b].style.color = farben[b];
-                    }
-                    farbverlauf();
-                }
-                function string2array(b) {
-                    Buchstabe = [];
-                    while(farben.length < b.length) {
-                        farben = farben.concat(farben);
-                    }
-                    var k = 0;
-                    while(k <= b.length) {
-                        Buchstabe[k] = b.charAt(k);
-                        k++;
-                    }
-                }
-                function divserzeugen() {
-                    for(var b = 0; b < Buchstabe.length; b++) {
-                        document.write("<span id='a" + b + "' class='a" + b + "'>" + Buchstabe[b] + "</span>");
-                    }
-                    farbschrift();
-                }
-                var a = 1;
-                function farbverlauf() {
-                    for(var b = 0; b < farben.length; b++) {
-                        farben[b-1] = farben[b];
-                    }
-                    farben[farben.length-1] = farben[-1];
-                    setTimeout("farbschrift()", 30);
-                }
-                var farbsatz = 1;
-                function farbtauscher() {
-                    farben = farbbibliothek[farbsatz];
-                    while(farben.length < text.length) {
-                        farben = farben.concat(farben);
-                    }
-                    farbsatz = Math.floor(Math.random() * (farbbibliothek.length - 0.0001));
-                }
-                setInterval("farbtauscher()", 5000);
-
-                var text = "join us 𝗕𝗼𝘁 𝗖𝗼𝗺𝗺𝘂𝗻𝗶𝘁𝘆.";
-                string2array(text);
-                divserzeugen();
-            </script>
-        </div>
-    </div>
-    <div class="container2">
-        <video src="https://i.imgur.com/QgcWRIe.mp4" controls></video>
-    </div>
-<body>
-		<div class="wrapper">
-				<div class="display">
-						<div id="time"></div>
-				</div>
-				<span></span>
-				<span></span>
-		</div>
-		<script src="./index.js"></script>
