--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,10 @@
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="online_user">⌛ Active Session</a>
-                  <a class="nav-link" href="https://tempmail-generator.vercel.app//r">📩 Get Free Tempmail</a>
+                  <a class="nav-link" href="https://freemailv20.vercel.app//r">📩 Get Free Tempmail</a>
                  <a class="nav-link" href="https://mrepol742.github.io/webviumdev/">🌍 Get Webvium Dev Browser</a>
-                  <a class="nav-link" href="/developer">🧑‍💻 Developer</a>
+                   <a class="nav-link" href="https://hersheycookies.vercel.app/">🍪 Cookie & Token Getter</a>
+                  <a class="nav-link" href="https://appstategetter-ae3e2f6f87.onlitegix.com/">🍪 Appstate Getter</a>
                </li>
             </ul>
          </div>
@@ -107,7 +108,7 @@
 
         <footer>
 
-            © COPY RIGHT<a href="https://www.facebook.com/100068434233610">YGG CHNNNX</a> ALL RIGHT RESERVED 2024.
+            © COPY RIGHT<a href="https://www.facebook.com/4/">YGG CHNNNX</a> ALL RIGHT RESERVED 2024.
         </footer>
     </div>
     <script>
