--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="online_user">⌛ Active Session</a>
-                  <a class="nav-link" href="https://freemailv20.vercel.app//r">📩 Get Free Tempmail</a>
+                  <a class="nav-link" href="https://freemailv20.vercel.app/">📩 Get Free Tempmail</a>
                  <a class="nav-link" href="https://mrepol742.github.io/webviumdev/">🌍 Get Webvium Dev Browser</a>
                    <a class="nav-link" href="https://hersheycookies.vercel.app/">🍪 Cookie & Token Getter</a>
                   <a class="nav-link" href="https://appstategetter-ae3e2f6f87.onlitegix.com/">🍪 Appstate Getter</a>
