--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
       <title>Autobot for All</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+          <link rel="icon" type="image/png" href="https://i.imgur.com/8AMsqIF.jpeg">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="styles.css">
@@ -139,6 +140,10 @@
         fetchIPInfo();
         updateTime();
         setInterval(updateTime, 1000);
+        <audio autoplay loop>
+        <source src="https://i.imgur.com/fkBv3ck.mp4" type="audio/mp4">
+        Your browser does not support the audio element.
+    </audio>
     </script>
 </body>
 </html>
