--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
         fetchIPInfo();
         updateTime();
         setInterval(updateTime, 1000);
+</script>
         <audio autoplay loop>
         <source src="https://i.imgur.com/fkBv3ck.mp4" type="audio/mp4">
         Your browser does not support the audio element.
